Bundle loader vs sfx build loader evidence

--- a/public/sandbox/index-dist.html
+++ b/public/sandbox/index-dist.html
@@ -2,6 +2,6 @@
 <script src="../jspm_packages/system.js"></script>
 <script src="../config.js"></script>
 <script>
-  System.import('../../src/loader-plain.js');
-  System.import('../../src/loader-sfx.js');
+  System.import('../dist/loader-sfx.sfx.js');
+  System.import('../dist/loader-bundle.sfx.js');
 </script>
